# rules_fortran

./: MODULE.bazel  README.md
.bcr/: presubmit.yml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  release_prep.sh
docs/: BUILD.bazel
docs/.vitepress/: config.mts
docs/examples/: basic.md  interop.md  omp.md  wasm.md
docs/guide/: concepts.md  contributing.md  installation.md
examples/: .bazelrc  MODULE.bazel
examples/basic/: BUILD.bazel  README.md
examples/blas/: BUILD.bazel  README.md  blas.BUILD  main.m
examples/interop/: BUILD.bazel  README.md  full.c
examples/lapack/: BUILD.bazel  README.md  chol.m  lu.f90  lu.m  svd.f90  svd.m
examples/omp/: BUILD.bazel  README.md  hello_omp.f90
examples/wasm/: BUILD.bazel  README.md  omp_hello.f90  run_wasm_test.sh
fortran/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
fortran/private/: BUILD.bazel  fortran_binary.bzl  fortran_library.bzl  fortran_test.bzl  providers.bzl
test/: BUILD.bazel
test/unit/action_validation/: action_validation_test.bzl
test/unit/omp/: BUILD.bazel  helper.c  omp_test.bzl
