"""rules_fortran - Bazel rules for Fortran with LLVM Flang."""

module(
    name = "rules_fortran",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")

bazel_dep(name = "rules_testing", version = "0.7.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)

flang = use_extension("//fortran:extensions.bzl", "flang")
use_repo(
    flang,
    "flang",
    "flang_linux_aarch64",
    "flang_linux_x86_64",
    "flang_macos_aarch64",
    "flang_macos_x86_64",
    "flang_windows_x86_64",
)

register_toolchains(
    "//fortran/toolchains:linux_x86_64_toolchain",
    "//fortran/toolchains:linux_aarch64_toolchain",
    "//fortran/toolchains:macos_x86_64_toolchain",
    "//fortran/toolchains:macos_aarch64_toolchain",
    "//fortran/toolchains:windows_x86_64_toolchain",
    "//fortran/toolchains:emscripten_wasm32_toolchain",
)
