load("@rules_fortran//fortran:defs.bzl", "fortran_library", "fortran_test")

# Hello World
fortran_test(
    name = "hello",
    srcs = ["hello.f90"],
)

# Library Example
fortran_library(
    name = "math_lib",
    srcs = [
        "math_module.f90",
        "statistics.f90",
    ],
    copts = ["-O2"],
)

fortran_library(
    name = "io_lib",
    srcs = ["io_module.f90"],
)

fortran_library(
    name = "core_lib",
    srcs = ["core.f90"],
)

# with dependencies
fortran_test(
    name = "app",
    srcs = ["main.f90"],
    copts = ["-O2"],
    deps = [
        ":core_lib",
        ":io_lib",
        ":math_lib",
    ],
)

# some tests
fortran_test(
    name = "math_test",
    srcs = ["math_test.f90"],
    deps = [":math_lib"],
)

# INCLUDE example - demonstrates hdrs attribute for .inc files
fortran_test(
    name = "constants",
    srcs = ["use_include.f90"],
    hdrs = ["include/constants.inc"],
    includes = ["include"],
)
