# cross compilation to webassembly

load("@emsdk//emscripten_toolchain:wasm_cc_binary.bzl", "wasm_cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_fortran//fortran:defs.bzl", "fortran_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Example-3.A hello world
fortran_library(
    name = "hello",
    srcs = ["hello.f90"],  # compiles the .f90 to an object file (.o)
    tags = ["wasm"],
)
#  _QQmain:                    # internal Fortran program entry (called by main)
#    (whole bunch of fortran asm...)
#  main:                       # the standard C entry point
#    call   5e <main+0xe>      # call 1: _FortranAProgramStart
#    call   63 <main+0x13>     # call 2: _QQmain
#    call   68 <main+0x18>     # call 3: _FortranAProgramEndStatement
#    xor    %eax,%eax
#    ret

# this `cc_binary` just wraps fortran intermediaries. main entry point from the
# original source is preserved. in this case, `main` and `_QQmain`.
# since there's no C main(), the linker picks up main from the Fortran library
cc_binary(
    name = "hello_cc",
    srcs = [],  # look ma no source!
    tags = ["wasm"],
    deps = [":hello"],
)

# produce final wasm output
wasm_cc_binary(
    name = "hello_wasm",
    cc_target = ":hello_cc",
    outputs = [
        "hello_cc.js",
        "hello_cc.wasm",
    ],
    tags = ["wasm"],
)

# Example-3.B omp hello (wasm32, pthreads)
fortran_library(
    name = "omp_hello",
    srcs = ["omp_hello.f90"],
    copts = [
        "-fopenmp",
        "-pthread",
    ],
    tags = ["wasm"],
    deps = ["@libomp"],
)

cc_binary(
    name = "omp_hello_cc",
    srcs = [],
    linkopts = ["-pthread"],
    tags = ["wasm"],
    deps = [":omp_hello"],
)

wasm_cc_binary(
    name = "omp_hello_wasm",
    cc_target = ":omp_hello_cc",
    outputs = [
        "omp_hello_cc.js",
        "omp_hello_cc.wasm",
    ],
    tags = ["wasm"],
    threads = "emscripten",
)

# Example-3.C full lapacke client, only single for faster build
cc_binary(
    name = "full",
    srcs = [
        "full.c",
    ],
    tags = ["wasm"],
    deps = [
        "@blas//:single",
        "@lapack//:single",
        "@lapacke//:single",
    ],
)

wasm_cc_binary(
    name = "full_wasm",
    cc_target = ":full",
    outputs = [
        "full.js",
        "full.wasm",
    ],
    tags = ["wasm"],
)

# wasm test wrappers (run via node)
sh_test(
    name = "hello_wasm_test",
    srcs = ["run_wasm_test.sh"],
    args = ["$(rootpaths :hello_wasm)"],
    data = [":hello_wasm"],
    tags = ["wasm"],
)

sh_test(
    name = "full_wasm_test",
    srcs = ["run_wasm_test.sh"],
    args = ["$(rootpaths :full_wasm)"],
    data = [":full_wasm"],
    tags = ["wasm"],
)

sh_test(
    name = "omp_hello_wasm_test",
    srcs = ["run_wasm_test.sh"],
    args = ["$(rootpaths :omp_hello_wasm)"],
    data = [":omp_hello_wasm"],
    tags = ["wasm"],
)
