"""Private implementation for rules_fortran."""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//fortran:__subpackages__"])

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "compile",
    srcs = ["compile.bzl"],
    deps = [
        ":providers",
        "@rules_cc//cc:find_cc_toolchain_bzl",  # for stardoc
        "@rules_cc//cc/common",  # for stardoc
    ],
)

bzl_library(
    name = "rules",
    srcs = [
        "fortran_binary.bzl",
        "fortran_library.bzl",
        "fortran_test.bzl",
    ],
    deps = [
        ":compile",
        ":providers",
        "@rules_cc//cc:find_cc_toolchain_bzl",  # for stardoc
        "@rules_cc//cc/common",  # for stardoc
    ],
)
